--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<div class="row text-center">
 				<div class="col-lg-12 col-sm-12 text-center">
 					<h1 class="text-center heading" id="about-heading">ABOUT ME</h1>
-					<p class="text-dark" id="about-text">I am a Computer Engineering major junior who have an interest in computer science. I have taught myself HTML5, CSS, and JavaScript and some Node.Js for backend development. I have learned and coded in various other languages over the years such as Java, Python, and C++. Currently exploring machine learning using python and online library such as Scikit-Learn and Tensorflow. I am eager to learn more knowledge and hone my skills with an internship opportunity.
+					<p class="text-dark" id="about-text">I am a junior in Binghamton University majoring in Computer Engineering. I have learned and coded in various programming languages over the years such as Java, Python, and C++. Taught myself HTML5, CSS, and JavaScript and some Node.Js for web developments. I am currently exploring the field of machine learning using python and online library such as Scikit-Learn and Tensorflow. I am eagerly looking for an internship opportunity to learn more knowledge and hone my skills.
 					</p>
 				</div>
 			</div>
