--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
             <div class="proj-info mb-4" id="proj2info">
                 <div class = proj-info-heading>
-                    <h1>Cenima HD</h1>
+                    <h1>Cinema HD</h1>
                     <a class="btn proj-link" href="https://movies-imdb-api.herokuapp.com/">Check It Out</a>
                 </div>
                 <p>An online keyword based search engine for movies, using omdb API. Programmed with HTML5, CSS, Bootstrap. Used Node.Js as backend environment.</p>
