--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
 <!--				<li class="nav-item mx-4"><a href="#" class="text-light">CONTACT</a></li>-->
 			</ul>
             <ul class="nav justify-content-center mb-4 social">
-                <li class="nav-item mx-3"><i class="fa fa-facebook-official" aria-hidden="true"></i></li>
+<!--                 <li class="nav-item mx-3"><i class="fa fa-facebook-official" aria-hidden="true"></i></li> -->
                 <li class="nav-item mx-3"><a href="https://www.linkedin.com/in/haosen-zheng"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                 <li class="nav-item mx-3"><a href="https://github.com/edlforest"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-                <li class="nav-item mx-3"><i class="fa fa-twitter" aria-hidden="true"></i></li>
+<!--                 <li class="nav-item mx-3"><i class="fa fa-twitter" aria-hidden="true"></i></li> -->
             </ul>
 		</nav>
 		<div class="container text-center text-muted">
